force-app/main/default/objects/Apttus_Config2__ProductInformation__c/Apttus_Config2__ProductInformation__c.object-meta.xml
<CustomObject>
    <description>Represents information associated with a product or a classification</description>
    <label>Product Information</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>