force-app/main/default/objects/Apttus_Config2__ProductInformation__c/fields/Apttus_Config2__ClassificationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ClassificationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the category. This is no longer used.</description>
    <label>Category (Deprecated)</label>
    <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
    <relationshipLabel>Category Information (Deprecated)</relationshipLabel>
    <relationshipName>CategoryInformation</relationshipName>
    <type>Lookup</type>
</CustomField>