force-app/main/default/objects/Apttus_Config2__ProductInformation__c/fields/Apttus_Config2__ContentUrl__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContentUrl__c</fullName>
    <description>The information content url</description>
    <label>Content Url</label>
    <type>Url</type>
</CustomField>