force-app/main/default/objects/Apttus_Config2__ProductInformation__c/fields/Apttus_Config2__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Description__c</fullName>
    <description>The information description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>