force-app/main/default/objects/Apttus_Config2__ProductInformation__c/fields/Apttus_Config2__EmbedCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EmbedCode__c</fullName>
    <description>Represents code for embedded audio or video.</description>
    <inlineHelpText>Enter embed code for video. For example 
&lt;iframe id=&quot;youtube&quot; style=&quot;display: none;&quot; title=&quot;YouTube video player&quot; width=&quot;640&quot; height=&quot;390&quot; src=&quot;http://www.youtube.com/embed/UZnP6prUWsU&quot; frameborder=&quot;0&quot; allowfullscreen&gt;&lt;/iframe&gt;</inlineHelpText>
    <label>Embed Code</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>