force-app/main/default/objects/Apttus_Config2__ProductInformation__c/fields/Apttus_Config2__FileId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FileId__c</fullName>
    <description>Holds information about uploaded file</description>
    <label>File</label>
    <length>32</length>
    <type>Text</type>
</CustomField>