force-app/main/default/objects/Apttus_Config2__ProductInformation__c/fields/Apttus_Config2__InformationType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InformationType__c</fullName>
    <label>Information Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attached File</fullName>
            </value>
            <value>
                <fullName>URL Address</fullName>
            </value>
            <value>
                <fullName>Embedded Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>