force-app/main/default/objects/Apttus_Config2__ProductInformation__c/fields/Apttus_Config2__ProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Information</relationshipLabel>
    <relationshipName>ProductInformation</relationshipName>
    <type>Lookup</type>
</CustomField>