force-app/main/default/objects/Apttus_Config2__ProductInformation__c/fields/Apttus_Config2__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Type__c</fullName>
    <description>Identifies the type of product collateral</description>
    <inlineHelpText>Identifies the type of product collateral</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Marketing Flyer</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>